--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "feedit",
   "version": "1.0.3",
-  "description": "Stream file from a place to your target",
+  "description": "Stream video file from a place to your target",
   "main": "index.js",
   "scripts": {
     "test": "mocha --timeout=10000"
